# SAE-ception-2.0

./: .gitignore  README.md  main.py  metrics_reference.md  print_results.py  project_status.md  pyproject.toml  run.sbatch  todo.md  workflow_diagram.md
configs/: config.yaml
configs/dataset/: ag_news.yaml  pile.yaml  sst2.yaml  wikitext.yaml
configs/experiment/: baseline.yaml  cycle_1.yaml
configs/model/: gpt2_small.yaml  gpt_neox_20b.yaml  pythia_410m.yaml  pythia_70m.yaml
configs/sae/: default.yaml  topk.yaml  topk_ste.yaml
configs/sharpening/: per_class.yaml  per_example.yaml  random.yaml
sbatch_runs/: intervention_hyperparam_search.sbatch  intervention_smoke_test.sbatch  l1_intervention.sbatch  perplexity_comparisons.sbatch  sae_ception_e2e_pretraining.sbatch  sae_structure_check.sbatch
scripts/: analyze.py  compare_perplexity.py  compare_sae_structure.py  evaluate.py  evaluate_sae_checkpoints.py  intervention_baseline.py  run_saebench.py  test_metrics.py  train_auxiliary.py  train_baseline.py  train_cpt.py  train_cpt_l1.py  train_cycle.py  train_sae.py  train_sae_pretrained.py
src/sae_ception/evaluation/: __init__.py  clustering.py  interpretability.py  lm_metrics.py  performance.py  saebench.py
src/sae_ception/models/: sae.py
src/sae_ception/sharpening/: __init__.py  base.py  per_class.py  per_example.py  random.py
src/sae_ception/training/: __init__.py  auxiliary.py  baseline.py  sae.py
src/sae_ception/utils/: __init__.py  checkpointing.py  data.py  hooks.py  logger.py
